--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,9 +6,13 @@
 
 header h1 {
     font-weight: 700;
-    font-size: 48px;
+    font-size: 46px;
     margin: 25px;
     color: #14213D;
+}
+
+#title-icon {
+    width: 40px;
 }
 
 hr {
@@ -34,3 +38,24 @@ hr {
     color: #FCA311;
 }
 
+.recipe-image {
+    border: 2px solid #FCA311;
+}
+
+.recipe-block {
+    background-color: #E5E5E5;
+    padding: 40px;
+    margin: 30px;
+}
+
+.recipe-heading {
+    padding: 20px 0;
+}
+
+footer {
+    text-align: center;
+}
+
+footer p {
+    padding: 15px;
+}
