--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,7 +17,6 @@ header h1 {
 
 hr {
     margin: 0 25px;
-    border: solid #FCA311 2px;
 }
 
 .table-of-contents {
@@ -38,7 +37,8 @@ hr {
     color: #FCA311;
 }
 
-.recipe-image {
+.recipe-image, 
+hr {
     border: 2px solid #FCA311;
 }
 
